force-app/main/default/objects/Potion__c/Potion__c.object-meta.xml
<CustomObject>
    <label>Potion</label>
    <nameField>
        <label>Potion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>