force-app/main/default/objects/Potion__c/fields/Base_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Base_Ingredient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Base Ingredient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ingredient__c.Type_of_Ingredient__c</field>
            <operation>equals</operation>
            <value>Base</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Potions</relationshipLabel>
    <relationshipName>Potions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>