force-app/main/default/objects/Potion__c/fields/Potion_Name__c.field-meta.xml
<CustomField>
    <fullName>Potion_Name__c</fullName>
    <description>Used in APEX tests only. Not for users to edit or view.</description>
    <label>Potion Name(APEX)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>