force-app/main/default/objects/Potion__c/fields/Potion_URL__c.field-meta.xml
<CustomField>
    <fullName>Potion_URL__c</fullName>
    <label>Potion URL</label>
    <type>Url</type>
</CustomField>