force-app/main/default/objects/Potion__c/fields/Secondary_Ingredient__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Ingredient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Ingredient</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Ingredient__c.Type_of_Ingredient__c</field>
            <operation>equals</operation>
            <value>Secondary</value>
        </filterItems>
        <filterItems>
            <field>$Source.Type_of_Potion__c</field>
            <operation>equals</operation>
            <valueField>Ingredient__c.Available_Potion__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Ingredient__c</referenceTo>
    <relationshipLabel>Potions (Secondary Ingredient)</relationshipLabel>
    <relationshipName>Potions1</relationshipName>
    <type>Lookup</type>
</CustomField>