force-app/main/default/objects/Potion__c/fields/Type_of_Potion__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Potion__c</fullName>
    <label>Type of Potion</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Potion_Types</valueSetName>
    </valueSet>
</CustomField>