force-app/main/default/objects/Potion__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Base_Ingredient__c</columns>
    <columns>Secondary_Ingredient__c</columns>
    <columns>Type_of_Potion__c</columns>
    <columns>Total_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>